--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,16 @@
 [versions]
-agp = "8.2.0"
+agp = "8.2.2"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
-androidx-activityCompose = "1.8.2"
+androidx-activityCompose = "1.9.0"
 androidx-appcompat = "1.6.1"
 androidx-constraintlayout = "2.1.4"
-androidx-core-ktx = "1.12.0"
+androidx-core-ktx = "1.13.1"
 androidx-espresso-core = "3.5.1"
-androidx-material = "1.11.0"
+androidx-material = "1.12.0"
 androidx-test-junit = "1.1.5"
-compose = "1.6.5"
+compose = "1.6.7"
 compose-plugin = "1.6.0"
 junit = "4.13.2"
 kotlin = "1.9.22"
@@ -23,12 +23,14 @@ runtime = "1.5.5"
 voyager = "1.1.0-alpha04"
 window-size = "0.5.0"
 
-lifecycleViewModel = "2.8.0-rc01"
+lifecycleViewModel = "2.8.0"
 koin = "3.6.0-alpha3"
 koinCompose = "3.6.0-alpha3"
 koinComposeMultiplatform = "1.2.0-alpha3"
 navigationCompose = "2.7.0-alpha03"
 roomCommon = "2.6.1"
+
+kotlinxCoroutines = "1.7.3"
 
 [libraries]
 coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sql-delight" }
@@ -67,6 +69,9 @@ sqldelight-android = { module = "app.cash.sqldelight:android-driver", version.re
 sqldelight-ios = { module = "app.cash.sqldelight:native-driver", version.ref = "sql-delight" }
 sqldelight-desktop = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sql-delight" }
 androidx-room-common = { group = "androidx.room", name = "room-common", version.ref = "roomCommon" }
+
+kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx:kotlinx-coroutines-core", name = "coroutines-core", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx:kotlinx-coroutines-android", name = "coroutines-android", version.ref = "kotlinxCoroutines" }
 
 
 [plugins]
