loading words now works, TODO loading screen

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
 androidx-activityCompose = "1.9.0"
-androidx-appcompat = "1.6.1"
+androidx-appcompat = "1.7.0"
 androidx-constraintlayout = "2.1.4"
 androidx-core-ktx = "1.13.1"
 androidx-espresso-core = "3.5.1"
@@ -13,7 +13,7 @@ androidx-test-junit = "1.1.5"
 compose = "1.6.7"
 compose-plugin = "1.6.0"
 junit = "4.13.2"
-kotlin = "1.9.22"
+kotlin = "2.0.0-Beta1"
 kotlinxSerialization = "1.6.3"
 kotlinxSerializationPlugin = "2.0.0"
 sql-delight = "2.0.1"
@@ -25,7 +25,7 @@ runtime = "1.5.5"
 voyager = "1.1.0-alpha04"
 window-size = "0.5.0"
 
-lifecycleViewModel = "2.8.0"
+lifecycleViewModel = "2.8.1"
 koin = "3.6.0-alpha3"
 koinCompose = "3.6.0-alpha3"
 koinComposeMultiplatform = "1.2.0-alpha3"
