--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,16 @@
 [versions]
-agp = "8.2.2"
-android-compileSdk = "34"
+agp = "8.8.1"
+android-compileSdk = "35"
 android-minSdk = "24"
-android-targetSdk = "34"
-androidx-activityCompose = "1.9.0"
+android-targetSdk = "35"
+androidx-activityCompose = "1.10.0"
 androidx-appcompat = "1.7.0"
-androidx-constraintlayout = "2.1.4"
-androidx-core-ktx = "1.13.1"
-androidx-espresso-core = "3.5.1"
+androidx-constraintlayout = "2.2.0"
+androidx-core-ktx = "1.15.0"
+androidx-espresso-core = "3.6.1"
 androidx-material = "1.12.0"
-androidx-test-junit = "1.1.5"
-compose = "1.6.7"
+androidx-test-junit = "1.2.1"
+compose = "1.7.8"
 compose-plugin = "1.6.0"
 junit = "4.13.2"
 kotlin = "2.0.0-Beta1"
@@ -19,22 +19,23 @@ kotlinxSerializationPlugin = "2.0.0"
 sql-delight = "2.0.1"
 
 kotlinxDatetime = "0.5.0"
-material3Android = "1.2.1"
+material3Android = "1.3.1"
 mvvmCore = "0.16.1"
 runtime = "1.5.5"
 voyager = "1.1.0-alpha04"
 window-size = "0.5.0"
 
-lifecycleViewModel = "2.8.1"
+lifecycleViewModel = "2.8.7"
 koin = "3.6.0-alpha3"
 koinCompose = "3.6.0-alpha3"
 koinComposeMultiplatform = "1.2.0-alpha3"
 navigationCompose = "2.7.0-alpha03"
 roomCommon = "2.6.1"
 
-kotlinxCoroutines = "1.7.3"
+kotlinxCoroutines = "1.8.0"
 
 [libraries]
+androidx-core = { module = "androidx.core:core", version.ref = "androidx-core-ktx" }
 coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sql-delight" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
@@ -74,8 +75,8 @@ sqldelight-ios = { module = "app.cash.sqldelight:native-driver", version.ref = "
 sqldelight-desktop = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sql-delight" }
 androidx-room-common = { group = "androidx.room", name = "room-common", version.ref = "roomCommon" }
 
-kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx:kotlinx-coroutines-core", name = "coroutines-core", version.ref = "kotlinxCoroutines" }
-kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx:kotlinx-coroutines-android", name = "coroutines-android", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
 
 
 [plugins]
